自定义数组的 增删改查的初步完成; PS:刷到IDEA有个插件可以 在编辑器里面刷LeetCode题; 有些羡慕了,我算法也该提上流程 算法,网络,计算机组成原理 操作系统也该学习学习了;

--- a/笔记整理.md
+++ b/笔记整理.md
@@ -42,3 +42,35 @@ for (int i = 0; i < 10; i++)
 ```
 
 ![image-20230221202823701](https://gitee.com/songhoujin/pictures-to-typora-by-utools/raw/master/image-20230221202823701-2023-2-2120:28:30.png)
+
+
+
+==手动编写动态数组来理解数组的运作机制==
+
+动态数组 ,还是数组,是封装静态数组,并增加了 不少扩容的能力;
+
+
+
+# 2-2 往数组中添加元素
+
+---
+
+![image-20230221205919491](https://gitee.com/songhoujin/pictures-to-typora-by-utools/raw/master/image-20230221205919491-2023-2-2120:59:30.png)
+
+
+
+
+
+![image-20230221210202614](https://gitee.com/songhoujin/pictures-to-typora-by-utools/raw/master/image-20230221210202614-2023-2-2121:02:30.png)
+
+1. 先移动已有的元素  index= 1, 第二个 i = 2; n = 5;  i是索引, 从2,3,4
+2.  将待放置元素,放进去
+   1. 维护N,N变为N+1
+
+
+
+# 2-3 获取,修改,打印
+
+
+
+<iframe src="//player.bilibili.com/player.html?aid=95761925&bvid=BV1gE41157pC&cid=894645411&page=4" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
